# lab1

./: .gitignore  CMakeLists.txt  cxx_perf_conv.cpp  cxx_perf_io.cpp  main.cpp  program  program1_runner.py  readme.md  test.txt
data/: out.csv  test.txt  test_stats.csv
programs/: program1.cpp  program1.hpp  program2.cpp  program2.hpp
scripts/: compute_graphs.py  filegenerator.py  program1_runner.py  program2_runner.py  sum.py
